task1/test_results_defects/infer_test/uninit_var/report.txt
#0
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:22: error: Dead Store
  The value written to &ret (type int) is never used.
  20. 	int a ;
  21. 	int ret;
  22. 	ret = a;/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
       ^
  23. }
  24. 

#1
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:22: error: Uninitialized Value
  The value read from a was never initialized.
  20. 	int a ;
  21. 	int ret;
  22. 	ret = a;/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
       ^
  23. }
  24. 

#2
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:33: error: Dead Store
  The value written to &ret (type int) is never used.
  31. 	int buf[5];
  32. 	int ret;
  33. 	ret = buf[3];/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
       ^
  34. }
  35. 

#3
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:33: error: Uninitialized Value
  The value read from buf[_] was never initialized.
  31. 	int buf[5];
  32. 	int ret;
  33. 	ret = buf[3];/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
       ^
  34. }
  35. 

#4
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:44: error: Dead Store
  The value written to &ret (type int) is never used.
  42. 	int buf[5][6];
  43. 	int ret;
  44. 	ret = buf[1][1];/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
       ^
  45. }
  46. 

#5
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:59: error: Dead Store
  The value written to &dvar1 (type float) is never used.
  57.     	dvar = 10.0;
  58.     else if (UNINIT_VAR_004_FALSE !=0 )
  59.     	dvar1 = 25.8;
           ^
  60.     else
  61.     	;

#6
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:62: error: Dead Store
  The value written to &ret (type float) is never used.
  60.     else
  61.     	;
  62.     ret = dvar;/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
          ^
  63. }
  64. 

#7
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:62: error: Uninitialized Value
  The value read from dvar was never initialized.
  60.     else
  61.     	;
  62.     ret = dvar;/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
          ^
  63. }
  64. 

#8
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:74: error: Uninitialized Value
  The value read from ret was never initialized.
  72. 	if (0)
  73. 	ret = 1;
  74. 	return ret;/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
       ^
  75. }
  76. 

#9
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:80: error: Dead Store
  The value written to &a (type int) is never used.
  78. {
  79. 	int a;
  80. 	a = uninit_var_005_func_001();
       ^
  81. }
  82. 

#10
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:91: error: Uninitialized Value
  The value read from a was never initialized.
  89.     long a;
  90.     int flag =0;
  91.     (flag==10)? (a = 1):(flag =a);/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
                               ^
  92. }
  93. 

#11
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:110: error: Dead Store
  The value written to &ret (type int) is never used.
  108. 	s.a = 1;
  109. 	s.b = 1;
  110. 	ret = s.uninit;/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
        ^
  111. }
  112. 

#12
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:110: error: Uninitialized Value
  The value read from s.uninit was never initialized.
  108. 	s.a = 1;
  109. 	s.b = 1;
  110. 	ret = s.uninit;/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
        ^
  111. }
  112. 

#13
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:130: error: Uninitialized Value
  The value read from data was never initialized.
  128.     while(uninit_var_008_func_001(flag)>0)
  129.     {
  130.     	data +=flag;/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
            ^
  131.     }
  132. }

#14
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:185: error: Dead Store
  The value written to &p (type int) is never used.
  183. 	int arr[5];
  184. 	int p ;
  185. 	p= uninit_var_011_func_001(arr,(sizeof(arr)/sizeof(int)));
        ^
  186. }
  187. 

#15
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:227: error: Uninitialized Value
  The value read from s.uninit was never initialized.
  225. 	ret = uninit_var_012_func_001 (s);
  226. 	if(ret >=0)
  227. 		r = s;
         ^
  228. }
  229. 

#16
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:242: error: Uninitialized Value
  The value read from val was never initialized.
  240. {
  241. 	values val ;/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
  242. 	return val;
        ^
  243. }
  244. 

#17
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:248: error: Dead Store
  The value written to &a (type int) is never used.
  246. {
  247.     int a;
  248.     a = uninit_var_013_func_001();
           ^
  249. }
  250. 

#18
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/uninit_var.c:295: error: Dead Store
  The value written to &ret (type int) is never used.
  293.     int a[3],ret;
  294.     uninit_var_015_func_001(a);
  295.     ret = a[1];/*Tool should detect this line as error*/ /*ERROR:Uninitialized Variable*/
           ^
  296. };
  297. 

Found 19 issues
                Issue Type(ISSUED_TYPE_ID): #
                    Dead Store(DEAD_STORE): 10
  Uninitialized Value(UNINITIALIZED_VALUE): 9
